--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Hello world</h1><br>
+    <h2>Deploy successful</h2>
 </body>
 </html>
