finish login , register
add more css for login and register, user page , admin page , reject page , logout page , viewer page

fix connect.php

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -130,3 +130,17 @@ button.button:active {
 .footer {
     text-align: center;
 }
+
+a.register {
+    text-decoration: underline;
+}
+
+div.alert {
+    text-align: center;
+    color: #FE6D73;
+}
+
+div.successAlt {
+    text-align: center;
+    color: #17C3B2;
+}
